# bareon-api

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
bareon_api/: __init__.py  cli.py  data_sync.py  models.py
bareon_api/api/: app.py
bareon_api/api/controllers/: actions.py  partitioning.py  root.py
bareon_api/common/: config.py  utils.py
bareon_api/tests/: base.py  test_bareon_api.py
bareon_api/tests/api/: test_api.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/bareon/: bareon-api-paste.ini  bareon-api.conf
