[metadata]
name = bareon-api
summary = API for bareon (ex. fuel-agent)
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    bareon_api
data_files =
    /etc/bareon-api = etc/bareon/*

[entry_points]

console_scripts =
    bareon-api = bareon_api.cli:run
    bareon-api-data-sync = bareon_api.cli:data_sync

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = bareon_api/locale
domain = bareon-api

[update_catalog]
domain = bareon-api
output_dir = bareon_api/locale
input_file = bareon_api/locale/bareon-api.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bareon_api/locale/bareon-api.pot
